# scraping_charger_data

./: .gitignore  README.md  Run_scraper.py  availability_scraper.py  data_analysis.ipynb  environment.yaml  fast_ids_to_scrape.csv  pyproject.toml  regular_ids_to_scrape.csv  testing.ipynb  ultra_ids_to_scrape.csv
Datascrapes/: ultra20220329 - 171931.csv  ultra20220330 - 134027.csv  ultra20220330 - 135029.csv  ultra20220330 - 140030.csv  ultra20220330 - 141030.csv  ultra20220330 - 142034.csv  ultra20220330 - 143029.csv  ultra20220330 - 144032.csv  ultra20220330 - 145032.csv  ultra20220330 - 150029.csv  ultra20220330 - 151033.csv  ultra20220330 - 152032.csv  ultra20220330 - 153031.csv  ultra20220330 - 154041.csv  ultra20220330 - 155031.csv  ultra20220330 - 160029.csv  ultra20220330 - 161036.csv  ultra20220330 - 162034.csv  ultra20220330 - 163029.csv  ultra20220330 - 164033.csv  ultra20220330 - 165034.csv  ultra20220330 - 170030.csv  ultra20220330 - 171027.csv  ultra20220330 - 172034.csv  ultra20220330 - 173029.csv  ultra20220330 - 174035.csv  ultra20220330 - 175036.csv  ultra20220330 - 180029.csv  ultra20220330 - 181034.csv  ultra20220330 - 182028.csv  ultra20220330 - 183030.csv  ultra20220330 - 184029.csv  ultra20220330 - 185026.csv  ultra20220330 - 190029.csv  ultra20220330 - 191034.csv  ultra20220330 - 192037.csv  ultra20220330 - 193030.csv  ultra20220330 - 194033.csv  ultra20220330 - 195033.csv  ultra20220330 - 200029.csv  (+7181 more)
analysis/: data_analysis.ipynb
ids_to_scrape/: ultra_ids_to_scrape.csv
production/: Run_scraper.py  run_scraper.bat
tests/: test.py  test2.py  (+5 more)
(+16 files in other folders)
