[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "scraping_charger_data"
version = "0.0.1"
requires-python = ">=3.8"
dependencies = [
    "requests", 
    "selenium",
    "numpy",
    "pandas",
]

[project.urls]
Homepage = "https://github.com/Mo1l/scraping_charger_data"

[tool.setuptools.packages.find]
where = ["src"]
